Update to language in screening message title

--- a/screening-message.html
+++ b/screening-message.html
@@ -1,5 +1,5 @@
 <div style="color: #222222; font-family: 'Helvetica Neue' 'Helvetica', Helvetica, Arial, sans-serif; font-weight: normal; font-style: normal; line-height: 1; cursor: default;">
-<p><strong>Your message contains some words we're concerned about.</strong></p>
+<p><strong>Your message contains language we're concerned about.</strong></p>
 
 <p>If you're feeling pretty bad right now, please consider reaching out to the caring, 
 trained individuals from free online chat and phone support services available throughout 
